force-app/main/default/objects/Military_Request__c/Military_Request__c.object-meta.xml
<CustomObject>
    <label>Military Request</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Military Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Military Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>