force-app/main/default/objects/Military_Request__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <formula>IF(
    ISBLANK(Due_Date__c),
    &quot;Low&quot;,

    IF(
        TODAY() + 5 &gt;= Due_Date__c,
        &quot;Middle&quot;,

        IF(
            TODAY() + 10 &gt;= Due_Date__c,
            &quot;High&quot;,
            &quot;Low&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>